Archive2/99/bc569e3c62152c/output
+ clang++ -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -pthread -Wconversion main.cpp
main.cpp:33:33: error: use of undeclared identifier 'change_salary'
    void (*p)(int, Husband&) = &change_salary;
                                ^
1 error generated.
